a bunch of css responsiveness improvements and fixes

--- a/src/app/components/header/header-link/header-link.html
+++ b/src/app/components/header/header-link/header-link.html
@@ -1,5 +1,5 @@
 <a
-  class="link"
+  class="g-truncate-1 link"
   [routerLink]="routerLink()"
   routerLinkActive="is-active"
   ariaCurrentWhenActive="page"
