--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -1,6 +1,6 @@
 <header class="header">
   <div class="g-layout-container content">
-    <div class="main">
+    <div class="logo-and-navigation">
       <a class="logo" routerLink="/" aria-label="Go to home page">
         <svg width="83" height="37" aria-hidden="true" focusable="false">
           <use
@@ -16,6 +16,6 @@
         <app-header-link label="Planets" routerLink="/planets"></app-header-link>
       </nav>
     </div>
-    <div class="header-search-bar" [style]="{ display: 'none' }">search_bar</div>
+    <input class="search-bar" placeholder="Search" />
   </div>
 </header>
