--- a/src/css/variables/layout.css
+++ b/src/css/variables/layout.css
@@ -3,4 +3,15 @@
   --footer-height: 72px;
   --viewport-width-max: 1385px;
   --layout-gutter: 32px;
+  --page-content-end-padding-big: 200px;
+  --page-content-end-padding-medium: 150px;
+  --page-content-end-padding-small: 100px;
+  /* TODO: Um die breakpoint variablen in media queries verwenden zu können müsste man SCSS oder PostCSS verwenden, weil die mediaqueries vor dem variablen ausgewertet werden */
+  --media-foo: 1100px;
+  --media-tablet-main: 768px;
+  --media-tablet-min: 601px;
+  --media-tablet-max: 1280px;
+  --media-mobile-main: 360px;
+  --media-mobile-min: 360px;
+  --media-mobile-max: 430px;
 }
