--- a/src/app/components/header/header.css
+++ b/src/app/components/header/header.css
@@ -14,10 +14,11 @@
   padding: 20px 0;
 }
 
-.main {
+.logo-and-navigation {
   display: grid;
   grid-auto-flow: column;
   justify-content: start;
+  align-items: center;
   column-gap: 76px;
 }
 
@@ -31,4 +32,39 @@
   align-items: center;
   column-gap: 50px;
   row-gap: 12px;
+}
+
+.search-bar {
+  width: 220px;
+  height: 50px;
+  border: 1px solid var(--color-grey-60);
+  border-radius: 2px;
+  background-color: var(--color-white);
+  padding: 15px 19px;
+}
+
+@media (max-width: 768px) {
+  .content {
+    grid-auto-flow: row;
+    justify-content: stretch;
+    column-gap: unset;
+    row-gap: 20px;
+  }
+
+  .logo-and-navigation {
+    justify-content: space-between;
+  }
+
+  .search-bar {
+    width: 100%;
+  }
+}
+
+@media (max-width: 601px) {
+  .logo-and-navigation {
+    grid-auto-flow: row;
+    justify-content: center;
+    justify-items: center;
+    row-gap: 28px;
+  }
 }
