--- a/src/app/pages/movies/movie/movie.css
+++ b/src/app/pages/movies/movie/movie.css
@@ -1,15 +1,58 @@
 /* TODO: this is actually the full content area wrapper element of a generic layout component, not just tied to movies */
 .movie {
+  background-color: var(--color-white);
   display: grid;
+  align-content: start;
   grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
   grid-template-rows: minmax(401px, auto) auto;
+  grid-template-areas:
+    'details slider'
+    'links .';
   column-gap: 152px;
   row-gap: 33px;
   margin-left: 20px;
-  background-color: var(--color-white);
-  padding-bottom: 200px;
+  padding-bottom: var(--page-content-end-padding-big);
+}
+
+.details {
+  grid-area: details;
 }
 
 .description {
   margin-top: 34px;
+}
+
+.slider {
+  grid-area: slider;
+}
+
+.links {
+  grid-area: links;
+}
+
+@media (max-width: 1200px) {
+  .movie {
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  }
+}
+
+@media (max-width: 1100px) {
+  .movie {
+    grid-template-columns: auto;
+    grid-template-rows: auto;
+    grid-template-areas:
+      'slider'
+      'details'
+      'links';
+    column-gap: unset;
+    row-gap: 55px;
+    margin-left: unset;
+    padding-bottom: var(--page-content-end-padding-medium);
+  }
+}
+
+@media (max-width: 601px) {
+  .movie {
+    padding-bottom: var(--page-content-end-padding-small);
+  }
 }
