--- a/src/app/components/image-slider/image-slider.html
+++ b/src/app/components/image-slider/image-slider.html
@@ -31,12 +31,12 @@
     }
   </div>
   <div class="indicators" aria-hidden="true">
-    @for (image of images(); track $index; let i = $index) {
+    @for (image of images(); track $index) {
       <button
         type="button"
-        (click)="setActiveIndex(i)"
+        (click)="setActiveIndex($index)"
         class="indicator"
-        [class.indicator-active]="i === activeIndex()"
+        [class.indicator-active]="$index === activeIndex()"
       >
         <svg width="11" height="11" aria-hidden="true" focusable="false">
           <use
