--- a/src/app/components/image-grid/image-grid-item/image-grid-item.html
+++ b/src/app/components/image-grid/image-grid-item/image-grid-item.html
@@ -1,16 +1,15 @@
 <div class="image-grid-item">
   <img class="image" [src]="imageUrl()" [alt]="imageTitle()" [title]="imageTitle()" />
   <div class="description-container">
-    <div class="g-title-3 g-truncate-1">{{ label() }}</div>
-    <div class="g-text-2 description">
-      <ng-content class="slot" />
+    <div class="g-title-3">
+      <span class="g-truncate-1">
+        {{ label() }}
+      </span>
     </div>
-    <!-- TODO: An sich ist das layout der component nicht verkehrt mit den paddings usw. aber es gibt keine gute link click fläche -->
-    <a
-      class="g-label-3 g-truncate-1 link"
-      [routerLink]="linkUri()"
-      [attr.aria-label]="linkTitle()"
-    >
+    <div class="g-text-2 description">
+      <ng-content />
+    </div>
+    <a class="g-label-3 link" [routerLink]="linkUri()" [attr.aria-label]="linkTitle()">
       More information...
     </a>
   </div>
