--- a/src/app/components/link-list/link-list-item/link-list-item.html
+++ b/src/app/components/link-list/link-list-item/link-list-item.html
@@ -1,7 +1,7 @@
 <a
   class="g-label-2 link-list-item"
   [routerLink]="linkUri()"
-  [title]="content.textContent.trim()"
+  [attr.aria-labelledby]="content.textContent.trim()"
 >
   <span class="g-truncate-1" #content>
     <ng-content />
