rough lazyloading of image slider images and minimalistic rendering performance optimizations

--- a/src/app/components/image-slider/image-slider.html
+++ b/src/app/components/image-slider/image-slider.html
@@ -24,6 +24,9 @@
               [alt]="image.alt"
               [width]="image.width"
               [height]="image.height"
+              [attr.loading]="$index === activeIndex() ? 'eager' : 'lazy'"
+              [attr.fetchpriority]="$index === activeIndex() ? 'high' : 'low'"
+              decoding="async"
             />
           </div>
         }
