--- a/src/app/components/image-slider/image-slider.css
+++ b/src/app/components/image-slider/image-slider.css
@@ -11,6 +11,7 @@
   position: relative;
   width: 100%;
   overflow: hidden;
+  contain: layout paint;
 }
 
 .slides {
@@ -20,10 +21,12 @@
   grid-auto-flow: column;
   transition: transform cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
   cursor: grab;
+  transform: translate3d(0, 0, 0);
 }
 
 .slides-swiping {
   cursor: grabbing;
+  will-change: transform;
 }
 
 .slide {
