--- a/src/app/pages/movies/movies.css
+++ b/src/app/pages/movies/movies.css
@@ -2,5 +2,17 @@
 .movies {
   height: 100%;
   background-color: var(--color-white);
-  padding-bottom: 200px;
+  padding-bottom: var(--page-content-end-padding-big);
+}
+
+@media (max-width: 1100px) {
+  .movies {
+    padding-bottom: var(--page-content-end-padding-medium);
+  }
+}
+
+@media (max-width: 601px) {
+  .movies {
+    padding-bottom: var(--page-content-end-padding-small);
+  }
 }
