--- a/src/app/pages/movies/movie/movie.html
+++ b/src/app/pages/movies/movie/movie.html
@@ -5,7 +5,7 @@
       [title]="data.title"
       [subtitle]="`Episode ${data.episodeId}`"
     />
-    <div class="movie">
+    <div class="layout">
       <section class="details" aria-labelledby="details-heading">
         <app-labeled-box>
           <h2 class="g-title-3" id="details-heading" #label>Details:</h2>
