--- a/src/app/pages/movies/movie/movie.css
+++ b/src/app/pages/movies/movie/movie.css
@@ -1,5 +1,5 @@
 /* TODO: this is actually the full content area wrapper element of a generic layout component, not just tied to movies */
-.movie {
+.layout {
   background-color: var(--color-white);
   display: grid;
   align-content: start;
@@ -18,11 +18,6 @@
   grid-area: details;
 }
 
-.labeled-box {
-  display: grid;
-  row-gap: 10px;
-}
-
 .description {
   margin-top: 34px;
 }
@@ -38,7 +33,7 @@
 }
 
 @media (max-width: 1200px) {
-  .movie {
+  .layout {
     grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     grid-template-areas:
       'details slider'
@@ -47,7 +42,7 @@
 }
 
 @media (max-width: 1100px) {
-  .movie {
+  .layout {
     grid-template-columns: auto;
     grid-template-rows: auto;
     grid-template-areas:
@@ -62,7 +57,7 @@
 }
 
 @media (max-width: 601px) {
-  .movie {
+  .layout {
     padding-bottom: var(--page-content-end-padding-small);
   }
 }
