--- a/src/app/pages/characters/character/character.html
+++ b/src/app/pages/characters/character/character.html
@@ -14,7 +14,7 @@
       </app-labeled-box>
       <p class="g-text-1 description">
         @if (data.eyeColor || data.hairColor || data.skinColor) {
-          Augen: {{ data.eyeColor ?? '-' }} · Haare: {{ data.hairColor ?? '-' }} · Haut:
+          Eyes: {{ data.eyeColor ?? '-' }} · Hair: {{ data.hairColor ?? '-' }} · Skin:
           {{ data.skinColor ?? '-' }}
         }
       </p>
