--- a/src/app/pages/characters/character/character.html
+++ b/src/app/pages/characters/character/character.html
@@ -12,39 +12,28 @@
         <h2 class="g-title-3" id="details-heading" #label>Details:</h2>
         <app-row-description-list [items]="descriptionRows()" />
       </app-labeled-box>
-      <p class="g-text-1 description">
-        @if (data.eyeColor || data.hairColor || data.skinColor) {
-          Eyes: {{ data.eyeColor ?? '-' }} · Hair: {{ data.hairColor ?? '-' }} · Skin:
-          {{ data.skinColor ?? '-' }}
-        }
-      </p>
     </section>
 
     @if (data.images.length) {
-      <app-image-slider resourceDetailSlider [images]="data.images" [viewportHeight]="374" />
+      <app-image-slider
+        resourceDetailSlider
+        [images]="data.images"
+        [viewportHeight]="374"
+      />
     }
 
-    <app-labeled-box resourceDetailLinks>
-      <h2 class="g-title-3" id="details-heading" #label>Films:</h2>
-      <app-link-list>
-        @for (id of data.filmIds; track $index) {
-          @let mock = `Film no. ${id}`;
-          <app-link-list-item [linkUri]="['/movie', id]">
-            {{ mock }}
-          </app-link-list-item>
-        }
-      </app-link-list>
-    </app-labeled-box>
-    <app-labeled-box resourceDetailLinks>
-      <h2 class="g-title-3" id="details-heading" #label>Vehicles:</h2>
-      <app-link-list>
-        @for (id of data.vehicleIds; track $index) {
-          @let mock = `Vehicle no. ${id}`;
-          <app-link-list-item [linkUri]="['/error']">
-            {{ mock }}
-          </app-link-list-item>
-        }
-      </app-link-list>
-    </app-labeled-box>
+    @if (data.filmIds.length) {
+      <app-labeled-box resourceDetailLinks>
+        <h2 class="g-title-3" id="details-heading" #label>Films:</h2>
+        <app-link-list>
+          @for (id of data.filmIds; track $index) {
+            @let mock = `Film no. ${id}`;
+            <app-link-list-item [linkUri]="['/movie', id]">
+              {{ mock }}
+            </app-link-list-item>
+          }
+        </app-link-list>
+      </app-labeled-box>
+    }
   </app-resource-detail-layout>
 }
