--- a/src/app/pages/movies/movie/movie.html
+++ b/src/app/pages/movies/movie/movie.html
@@ -16,30 +16,39 @@
     </section>
 
     @if (data.images.length) {
-      <app-image-slider resourceDetailSlider [images]="data.images" [viewportHeight]="374" />
+      <app-image-slider
+        resourceDetailSlider
+        [images]="data.images"
+        [viewportHeight]="374"
+      />
     }
 
-    <app-labeled-box resourceDetailLinks>
-      <h2 class="g-title-3" id="details-heading" #label>Characters:</h2>
-      <app-link-list>
-        @for (id of data.characterIds; track $index) {
-          @let mock = `Character no. ${id}`;
-          <app-link-list-item [linkUri]="['/character', id]">
-            {{ mock }}
-          </app-link-list-item>
-        }
-      </app-link-list>
-    </app-labeled-box>
-    <app-labeled-box resourceDetailLinks>
-      <h2 class="g-title-3" id="details-heading" #label>Planets:</h2>
-      <app-link-list>
-        @for (id of data.planetIds; track $index) {
-          @let mock = `Planet no. ${id}`;
-          <app-link-list-item [linkUri]="['/planet', id]">
-            {{ mock }}
-          </app-link-list-item>
-        }
-      </app-link-list>
-    </app-labeled-box>
+    @if (data.characterIds.length) {
+      <app-labeled-box resourceDetailLinks>
+        <h2 class="g-title-3" id="details-heading" #label>Characters:</h2>
+        <app-link-list>
+          @for (id of data.characterIds; track $index) {
+            @let mock = `Character no. ${id}`;
+            <app-link-list-item [linkUri]="['/character', id]">
+              {{ mock }}
+            </app-link-list-item>
+          }
+        </app-link-list>
+      </app-labeled-box>
+    }
+
+    @if (data.planetIds.length) {
+      <app-labeled-box resourceDetailLinks>
+        <h2 class="g-title-3" id="details-heading" #label>Planets:</h2>
+        <app-link-list>
+          @for (id of data.planetIds; track $index) {
+            @let mock = `Planet no. ${id}`;
+            <app-link-list-item [linkUri]="['/planet', id]">
+              {{ mock }}
+            </app-link-list-item>
+          }
+        </app-link-list>
+      </app-labeled-box>
+    }
   </app-resource-detail-layout>
 }
