--- a/src/app/pages/characters/character/character.html
+++ b/src/app/pages/characters/character/character.html
@@ -22,14 +22,14 @@
       />
     }
 
-    @if (data.filmIds.length) {
+    @let filmItems = films.data();
+    @if (filmItems.length) {
       <app-labeled-box resourceDetailLinks>
         <h2 class="g-title-3" id="details-heading" #label>Films:</h2>
         <app-link-list>
-          @for (id of data.filmIds; track $index) {
-            @let mock = `Film no. ${id}`;
-            <app-link-list-item [linkUri]="['/movie', id]">
-              {{ mock }}
+          @for (film of filmItems; track $index) {
+            <app-link-list-item [linkUri]="['/movie', film.id]">
+              {{ film.title }}
             </app-link-list-item>
           }
         </app-link-list>
