add lazy loading ob sub resources via intersection observer

--- a/src/app/pages/movies/movie/movie.html
+++ b/src/app/pages/movies/movie/movie.html
@@ -23,31 +23,43 @@
       />
     }
 
-    @let characterItems = characters.data();
-    @if (characterItems.length) {
-      <app-labeled-box resourceDetailLinks>
+    @if (data.characterIds.length) {
+      <app-labeled-box
+        resourceDetailLinks
+        appVisibleTrigger
+        (becameVisible)="onCharacterLinksVisible()"
+      >
         <h2 class="g-title-3" id="details-heading" #label>Characters:</h2>
-        <app-link-list>
-          @for (character of characterItems; track $index) {
-            <app-link-list-item [linkUri]="['/character', character.id]">
-              {{ character.name }}
-            </app-link-list-item>
-          }
-        </app-link-list>
+        @let characterItems = characters.data();
+        @if (characterItems.length) {
+          <app-link-list>
+            @for (character of characterItems; track $index) {
+              <app-link-list-item [linkUri]="['/character', character.id]">
+                {{ character.name }}
+              </app-link-list-item>
+            }
+          </app-link-list>
+        }
       </app-labeled-box>
     }
 
-    @let planetItems = planets.data();
-    @if (planetItems.length) {
-      <app-labeled-box resourceDetailLinks>
+    @if (data.planetIds.length) {
+      <app-labeled-box
+        resourceDetailLinks
+        appVisibleTrigger
+        (becameVisible)="onPlanetLinksVisible()"
+      >
         <h2 class="g-title-3" id="details-heading" #label>Planets:</h2>
-        <app-link-list>
-          @for (planet of planetItems; track $index) {
-            <app-link-list-item [linkUri]="['/planet', planet.id]">
-              {{ planet.name }}
-            </app-link-list-item>
-          }
-        </app-link-list>
+        @let planetItems = planets.data();
+        @if (planetItems.length) {
+          <app-link-list>
+            @for (planet of planetItems; track $index) {
+              <app-link-list-item [linkUri]="['/planet', planet.id]">
+                {{ planet.name }}
+              </app-link-list-item>
+            }
+          </app-link-list>
+        }
       </app-labeled-box>
     }
   </app-resource-detail-layout>
