add lazy loading ob sub resources via intersection observer to the rest of the resouce detail pages

--- a/src/app/pages/planets/planet/planet.html
+++ b/src/app/pages/planets/planet/planet.html
@@ -21,31 +21,43 @@
       />
     }
 
-    @let residentItems = residents.data();
-    @if (residentItems.length) {
-      <app-labeled-box resourceDetailLinks>
+    @if (data.residentIds.length) {
+      <app-labeled-box
+        resourceDetailLinks
+        appVisibleTrigger
+        (becameVisible)="onResidentLinksVisible()"
+      >
         <h2 class="g-title-3" id="details-heading" #label>Residents:</h2>
-        <app-link-list>
-          @for (resident of residentItems; track $index) {
-            <app-link-list-item [linkUri]="['/character', resident.id]">
-              {{ resident.name }}
-            </app-link-list-item>
-          }
-        </app-link-list>
+        @let residentItems = residents.data();
+        @if (residentItems.length) {
+          <app-link-list>
+            @for (resident of residentItems; track $index) {
+              <app-link-list-item [linkUri]="['/character', resident.id]">
+                {{ resident.name }}
+              </app-link-list-item>
+            }
+          </app-link-list>
+        }
       </app-labeled-box>
     }
 
-    @let filmItems = films.data();
-    @if (filmItems.length) {
-      <app-labeled-box resourceDetailLinks>
+    @if (data.filmIds.length) {
+      <app-labeled-box
+        resourceDetailLinks
+        appVisibleTrigger
+        (becameVisible)="onFilmLinksVisible()"
+      >
         <h2 class="g-title-3" id="details-heading" #label>Films:</h2>
-        <app-link-list>
-          @for (film of filmItems; track $index) {
-            <app-link-list-item [linkUri]="['/movie', film.id]">
-              {{ film.title }}
-            </app-link-list-item>
-          }
-        </app-link-list>
+        @let filmItems = films.data();
+        @if (filmItems.length) {
+          <app-link-list>
+            @for (film of filmItems; track $index) {
+              <app-link-list-item [linkUri]="['/movie', film.id]">
+                {{ film.title }}
+              </app-link-list-item>
+            }
+          </app-link-list>
+        }
       </app-labeled-box>
     }
   </app-resource-detail-layout>
